fixed modal visual bug on mobile

--- a/src/style.sass
+++ b/src/style.sass
@@ -91,6 +91,7 @@ button
         gap: 1rem
         padding: 0.5rem 1rem
         color: white
+        border-radius: 1rem 1rem 0 0
         h5
             flex: auto
             padding: 1rem
@@ -106,10 +107,10 @@ button
             cursor: pointer
 
     .modal-body
-        background: white
-        overflow: hidden
         border-radius: 1rem
         z-index: 2
+        background: white
+        border-radius: 2rem 2rem 1rem 1rem
 
     .modal-content
         margin: 1rem
